feat: Skills の画面を作成 (#7)

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,6 @@
 $main-green: #3ad353;
+$padding-block: 1rem;
+$icon-margin-horizontal: 0.2rem;
 
 .footer {
   width: 100vw;
@@ -20,6 +22,8 @@ $main-green: #3ad353;
 }
 
 .SNS {
+  padding: $padding-block 0;
+
   .title {
     width: 100vw;
     display: flex;
@@ -42,9 +46,9 @@ $main-green: #3ad353;
   .content:hover {
     animation: jump-small 1s;
   }
-  $margin-horizontal: 0.2rem;
+
   .icon {
-    margin-right: $margin-horizontal;
+    margin-right: $icon-margin-horizontal;
   }
 }
 
@@ -57,4 +61,37 @@ $main-green: #3ad353;
     transform: translate(0, -0.3rem);
     color: $main-green;
   }
+}
+
+.skills {
+  padding: $padding-block 0;
+
+  .title {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    padding-top: 0.4rem;
+  }
+
+  .icon {
+    margin-right: $icon-margin-horizontal;
+  }
+
+  .contents {
+    display: flex;
+    justify-content: center;
+
+    li {
+      list-style-type: none;
+    }
+  }
+  .langs {
+    display: flex;
+    justify-content: left;
+  }
+}
+
+.stars {
+  padding: 0 0.5rem;
 }
