feat: Profile の画面を作成 (#7)

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -21,6 +21,7 @@ $icon-margin-horizontal: 0.2rem;
   }
 }
 
+.profile,
 .SNS,
 .skills,
 .products {
@@ -67,6 +68,7 @@ $icon-margin-horizontal: 0.2rem;
   }
 }
 
+.profile,
 .skills {
   .contents {
     display: flex;
