style: tag の見た目を修正 (#16)

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -66,8 +66,9 @@ $icon-margin-horizontal: 0.2rem;
         color: #256FBA;
       }
       .tag {
-        columns: #6B7377;
+        color: #6B7377;
         display: inline-block;
+        padding-right: 1rem;
       }
     }
   }
